@@ -1226,7 +1226,7 @@ static void webkit_web_view_class_init(WebKitWebViewClass* webViewClass)
                                                        "The level of zoom of the content",
                                                        G_MINFLOAT,
                                                        G_MAXFLOAT,
-                                                       1,
+                                                       1.0f,
                                                        WEBKIT_PARAM_READWRITE));
 
     g_object_class_install_property(objectClass, PROP_FULL_CONTENT_ZOOM,
